--- a/source/DirectX.vcxproj
+++ b/source/DirectX.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="ColorRGB.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="MathHelpers.h" />
