fixed camera, started texture

--- a/source/DirectX.vcxproj.filters
+++ b/source/DirectX.vcxproj.filters
@@ -43,6 +43,9 @@
       <Filter>Misc</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Texture.h">
+      <Filter>Misc</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
@@ -67,6 +70,9 @@
       <Filter>Misc</Filter>
     </ClCompile>
     <ClCompile Include="Mesh.cpp">
+      <Filter>Misc</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
       <Filter>Misc</Filter>
     </ClCompile>
   </ItemGroup>
