--- a/source/DirectX.vcxproj.filters
+++ b/source/DirectX.vcxproj.filters
@@ -46,6 +46,7 @@
     <ClInclude Include="Texture.h">
       <Filter>Misc</Filter>
     </ClInclude>
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
